# dapps-non-fungible-token

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: build.yml  docs.yml  release.yml
frontend/: package-lock.json  package.json
implementors/gmeta/: trait.Metadata.js
implementors/scale_info/: trait.TypeInfo.js
io/: Cargo.toml
io/src/: lib.rs
nft/: .metahash  Cargo.toml  all.html  build.rs  index.html  meta.txt
nft-marketplace/: Cargo.toml
nft-marketplace/marketplace/: Cargo.toml
nft-marketplace/nft/: Cargo.toml
nft-marketplace/src/: auction.rs  lib.rs  nft_messages.rs  offers.rs  payment.rs  sale.rs  state.rs
nft-marketplace/tests/: auction.rs  offers.rs  sale.rs  utils.rs
nft-street-art/: Cargo.toml
nft-street-art/io/: Cargo.toml
nft_common/: Cargo.toml
nft_io/: all.html  enum.NFTAction.html  enum.NFTEvent.html  index.html  sidebar-items.js  struct.Collection.html  struct.Constraints.html  struct.DelegatedApproveMessage.html  struct.InitNFT.html  struct.IoNFT.html  struct.IoNFTState.html  struct.NFTMetadata.html  struct.Nft.html  struct.State.html
nft_state/: all.html  index.html  sidebar-items.js
on-chain-nft/: Cargo.toml
on-chain-nft/api/src/: deploy.js  mint.js  onchain_gas.txt  payloads.ts  subscribe.js  token_uri.js
on-chain-nft/api/src/nft/: .env  deploy.js  mint.js  subscribe.js
on-chain-nft/api/src/onchain/: .env  deploy.js  mint.js  token_uri.js
on-chain-nft/io/: Cargo.toml
on-chain-nft/io/src/: lib.rs
on-chain-nft/src/: lib.rs
on-chain-nft/tests/: on_chain_tests.rs  utils.rs
rentable-nft/: Cargo.toml
rentable_nft/: Cargo.toml  README.md
rentable_nft/io/: Cargo.toml
rentable_nft/io/src/: lib.rs
src/: contract.rs  lib.rs
state/: Cargo.toml
tests/: nft_tests.rs  node_tests.rs  utils.rs
(+62 files in other folders)
