[package]
name = "nft-io"
version = "0.2.5"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib.git", branch = "as-derive-ords" }
primitive-types = { version = "0.12.1", default-features = false }
