[package]
name = "on-chain-nft"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
primitive-types = { version = "0.11.1", default-features = false, features = ["scale-info"]}
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
gear-lib = { git = "https://github.com/gear-academy/gear-lib.git", branch = "on-chain-nft" } # FIXME: Remove branch after it merge
on-chain-nft-io = { path = "io" }
gear-lib-derive = { git = "https://github.com/gear-academy/gear-lib.git" , branch = "on-chain-nft" } # FIXME: Remove branch after it merge

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" }
