[package]
name = "io"
version = "0.2.4"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib.git" }
primitive-types = { version = "0.12.1", default-features = false }
